<resources>
    <string name="app_name">Homeshare</string>
    <string name="participant">Participant Details</string>
    <string name="firstNameText">First Name</string>
    <string name="lastNameText">Last Name</string>
    <string name="participantIdText">Participant ID</string>
    <string name="firebaseTokenText">Firebase Token</string>
    <string name="interviewLinkText">Interview Link</string>
    <string name="wearableText">Wearable</string>
    <string name="emailLinkText">Email Link</string>
    <string name="passwordText">Account Password</string>
    <string name="scanButtonText">Scan</string>
    <string name="genButtonText">Generate Token</string>
    <string name="saveButtonText">Save</string>
    <string name="QRError">Unable to read QR, try again</string>
    <string name="listemptySurvey">No surveys available</string>
    <string name="listemptyInterview">No interviews scheduled at the moment</string>
    <string name="invalidSurveyLink">Incorrect survey link, please contact researchers</string>
    <string name="interviewNotActive">Interview not yet active</string>
    <string name="sun">&#xf00d;</string>
    <string name="thunder">&#xf01e;</string>
    <string name="drizzle">&#xf01c;</string>
    <string name="rain">&#xf008;</string>
    <string name="snow">&#xf01b;</string>
    <string name="fog">&#xf014;</string>
    <string name="cloud">&#xf013;</string>
    <string name="researcherNotified">Researchers have been notified</string>
</resources>
