<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="participant"
            type="edu.indiana.soic.homeshare.homeshare.data.model.Participant"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserActivity">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/participantDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/participant"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/firstNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/firstNameText"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/participantDetail" />

                <TextView
                    android:id="@+id/lastNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/lastNameText"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" />

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="@{participant.firstName}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/firstNameLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="@{participant.lastName}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lastNameLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/participantIdLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/participantIdText"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lastNameLabel" />

                <EditText
                    android:id="@+id/participantId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="@{participant.participantId}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/participantIdLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/firebaseTokenLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/firebaseTokenText"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/participantIdLabel" />

                <EditText
                    android:id="@+id/firebaseToken"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text=""
                    app:layout_constraintBaseline_toBaselineOf="@+id/firebaseTokenLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/interviewLinkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/interviewLinkText"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firebaseTokenLabel" />

                <EditText
                    android:id="@+id/interviewLink"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="@{participant.zoomLink}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/interviewLinkLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/wearableLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/wearableText"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/interviewLinkLabel" />

                <EditText
                    android:id="@+id/wearable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="@{participant.wearable}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/wearableLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/emailLinkText"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wearableLabel" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="@{participant.email}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/emailLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2" />

                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/passwordText"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text=""
                    app:layout_constraintBaseline_toBaselineOf="@+id/passwordLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2" />

                <Button
                    android:id="@+id/scanButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="52dp"
                    android:text="@string/scanButtonText"
                    android:onClick="scanParticipantDetails"
                    app:layout_constraintEnd_toStartOf="@+id/generateButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

                <Button
                    android:id="@+id/generateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/genButtonText"
                    app:layout_constraintBaseline_toBaselineOf="@+id/scanButton"
                    app:layout_constraintEnd_toStartOf="@+id/saveButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/scanButton" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:text="@string/saveButtonText"
                    app:layout_constraintBaseline_toBaselineOf="@+id/generateButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/generateButton" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="500dp" />
            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</layout>